--- a/html/draft/css/draft.css
+++ b/html/draft/css/draft.css
@@ -232,6 +232,32 @@ body {
   top: -2px;
 }
 
+.item-card.full {
+  height: 96px;
+  border-radius: 12px;
+}
+
+.item-card.full .item-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.item-card.full .item-icon-wrap span {
+  display: block;
+}
+
+.item-card.full .item-body .num-big {
+  font-size: 20px;
+}
+
+.item-card.full .item-body .item-detail {
+  display: block;
+}
+
+.item-card.full .item-body .due-date {
+  top: -2px;
+}
+
 .trigger-wrap {
   position: fixed;
   width: 20px;
