--- a/html/draft/css/draft.scss
+++ b/html/draft/css/draft.scss
@@ -118,6 +118,23 @@
             }
         }
     }
+    
+    &.full {
+        height: 96px; border-radius: 12px;
+        .item-icon {
+            width: 50px; height: 50px;
+        }
+        .item-icon-wrap {
+            span { display: block;}
+        }
+        .item-body { 
+            .num-big { font-size: 20px; }
+            .item-detail { display: block;}
+            .due-date {
+                top: -2px;    
+            }
+        }
+    }
 }
 
 .trigger-wrap {
